--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <body>
      <form class="box" action="index.html" method="post">
      <h1>Login</h1>
-     <input type="text" name=" " placeholder="Username">
+     <input type="text" name=" " placeholder="USERNAME">
      <input type="password" name=" " placeholder="password">
      <input type="submit"   value="Login">
     </form>
