--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <form class="box" action="index.html" method="post">
      <h1>Login</h1>
      <input type="text" name=" " placeholder="USERNAME">
-     <input type="password" name=" " placeholder="password">
+     <input type="password" name=" " placeholder="PASSWORD">
      <input type="submit"   value="Login">
     </form>
 
