--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <h1>Login</h1>
      <input type="text" name=" " placeholder="USERNAME">
      <input type="password" name=" " placeholder="PASS">
-     <input type="submit"   value="Login">
+     <input type="SUBMIT"   value="Login">
     </form>
 
 
