--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <body>
      <form class="box" action="index.html" method="post">
      <h1>Login</h1>
-     <input type="text" name=" " placeholder="USERNAME">
+     <input type="text" name=" " placeholder="ENTER USERNAME">
      <input type="password" name=" " placeholder="PASS">
      <input type="SUBMIT"   value="Login">
     </form>
