--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <form class="box" action="index.html" method="post">
      <h1>Login</h1>
      <input type="text" name=" " placeholder="ENTER USERNAME">
-     <input type="password" name=" " placeholder="PASS">
+     <input type="password" name=" " placeholder="PASS-WORD">
      <input type="SUBMIT"   value="Login">
     </form>
 
